tests/snapshots/declare_enddeclare_tests__declare_enddeclare_mixed_with_regular_code.snap
---
source: tests/declare_enddeclare_tests.rs
expression: program
---
Program {
    statements: [
        Expression {
            expr: Assign {
                var: Variable {
                    name: Span {
                        start: 6,
                        end: 13,
                    },
                    span: Span {
                        start: 6,
                        end: 13,
                    },
                },
                expr: Boolean {
                    value: true,
                    span: Span {
                        start: 16,
                        end: 20,
                    },
                },
                span: Span {
                    start: 6,
                    end: 20,
                },
            },
            span: Span {
                start: 6,
                end: 30,
            },
        },
        Declare {
            declares: [
                DeclareItem {
                    key: Token {
                        kind: Identifier,
                        span: Span {
                            start: 31,
                            end: 43,
                        },
                    },
                    value: Integer {
                        value: [
                            49,
                        ],
                        span: Span {
                            start: 44,
                            end: 45,
                        },
                    },
                    span: Span {
                        start: 31,
                        end: 45,
                    },
                },
            ],
            body: [
                Function {
                    attributes: [],
                    name: Token {
                        kind: Identifier,
                        span: Span {
                            start: 61,
                            end: 66,
                        },
                    },
                    by_ref: false,
                    params: [
                        Param {
                            attributes: [],
                            modifiers: [],
                            name: Token {
                                kind: Variable,
                                span: Span {
                                    start: 71,
                                    end: 73,
                                },
                            },
                            ty: Some(
                                Simple(
                                    Token {
                                        kind: TypeInt,
                                        span: Span {
                                            start: 67,
                                            end: 70,
                                        },
                                    },
                                ),
                            ),
                            default: None,
                            by_ref: false,
                            variadic: false,
                            hooks: None,
                            span: Span {
                                start: 67,
                                end: 73,
                            },
                        },
                    ],
                    return_type: Some(
                        Simple(
                            Token {
                                kind: TypeInt,
                                span: Span {
                                    start: 76,
                                    end: 79,
                                },
                            },
                        ),
                    ),
                    body: [
                        Return {
                            expr: Some(
                                Binary {
                                    left: Variable {
                                        name: Span {
                                            start: 97,
                                            end: 99,
                                        },
                                        span: Span {
                                            start: 97,
                                            end: 99,
                                        },
                                    },
                                    op: Mul,
                                    right: Integer {
                                        value: [
                                            50,
                                        ],
                                        span: Span {
                                            start: 102,
                                            end: 103,
                                        },
                                    },
                                    span: Span {
                                        start: 97,
                                        end: 103,
                                    },
                                },
                            ),
                            span: Span {
                                start: 90,
                                end: 110,
                            },
                        },
                    ],
                    doc_comment: None,
                    span: Span {
                        start: 52,
                        end: 121,
                    },
                },
            ],
            span: Span {
                start: 23,
                end: 130,
            },
        },
        Expression {
            expr: Assign {
                var: Variable {
                    name: Span {
                        start: 124,
                        end: 130,
                    },
                    span: Span {
                        start: 124,
                        end: 130,
                    },
                },
                expr: Boolean {
                    value: false,
                    span: Span {
                        start: 133,
                        end: 138,
                    },
                },
                span: Span {
                    start: 124,
                    end: 138,
                },
            },
            span: Span {
                start: 124,
                end: 140,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 140,
    },
}
