tests/snapshots/declare_enddeclare_tests__declare_enddeclare_multiple_directives.snap
---
source: tests/declare_enddeclare_tests.rs
expression: program
---
Program {
    statements: [
        Declare {
            declares: [
                DeclareItem {
                    key: Token {
                        kind: Identifier,
                        span: Span {
                            start: 14,
                            end: 26,
                        },
                    },
                    value: Integer {
                        value: [
                            49,
                        ],
                        span: Span {
                            start: 27,
                            end: 28,
                        },
                    },
                    span: Span {
                        start: 14,
                        end: 28,
                    },
                },
                DeclareItem {
                    key: Token {
                        kind: Identifier,
                        span: Span {
                            start: 30,
                            end: 35,
                        },
                    },
                    value: Integer {
                        value: [
                            49,
                        ],
                        span: Span {
                            start: 36,
                            end: 37,
                        },
                    },
                    span: Span {
                        start: 30,
                        end: 37,
                    },
                },
            ],
            body: [
                Function {
                    attributes: [],
                    name: Token {
                        kind: Identifier,
                        span: Span {
                            start: 53,
                            end: 56,
                        },
                    },
                    by_ref: false,
                    params: [],
                    return_type: None,
                    body: [
                        Return {
                            expr: Some(
                                Integer {
                                    value: [
                                        52,
                                        50,
                                    ],
                                    span: Span {
                                        start: 76,
                                        end: 78,
                                    },
                                },
                            ),
                            span: Span {
                                start: 69,
                                end: 85,
                            },
                        },
                    ],
                    doc_comment: None,
                    span: Span {
                        start: 44,
                        end: 96,
                    },
                },
            ],
            span: Span {
                start: 6,
                end: 98,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 98,
    },
}
