tests/snapshots/declare_enddeclare_tests__declare_enddeclare_ticks.snap
---
source: tests/declare_enddeclare_tests.rs
assertion_line: 37
expression: program
---
Program {
    statements: [
        Nop {
            span: Span {
                start: 0,
                end: 6,
            },
        },
        Declare {
            declares: [
                DeclareItem {
                    key: Token {
                        kind: Identifier,
                        span: Span {
                            start: 14,
                            end: 19,
                        },
                    },
                    value: Integer {
                        value: [
                            49,
                        ],
                        span: Span {
                            start: 20,
                            end: 21,
                        },
                    },
                    span: Span {
                        start: 14,
                        end: 21,
                    },
                },
            ],
            body: [
                Expression {
                    expr: Assign {
                        var: Variable {
                            name: Span {
                                start: 28,
                                end: 36,
                            },
                            span: Span {
                                start: 28,
                                end: 36,
                            },
                        },
                        expr: Integer {
                            value: [
                                48,
                            ],
                            span: Span {
                                start: 39,
                                end: 40,
                            },
                        },
                        span: Span {
                            start: 28,
                            end: 40,
                        },
                    },
                    span: Span {
                        start: 28,
                        end: 68,
                    },
                },
                Expression {
                    expr: Call {
                        func: Variable {
                            name: Span {
                                start: 46,
                                end: 68,
                            },
                            span: Span {
                                start: 46,
                                end: 68,
                            },
                        },
                        args: [
                            Arg {
                                name: None,
                                value: Closure {
                                    attributes: [],
                                    is_static: false,
                                    by_ref: false,
                                    params: [],
                                    uses: [
                                        ClosureUse {
                                            var: Token {
                                                kind: Variable,
                                                span: Span {
                                                    start: 86,
                                                    end: 94,
                                                },
                                            },
                                            by_ref: true,
                                            span: Span {
                                                start: 86,
                                                end: 94,
                                            },
                                        },
                                    ],
                                    return_type: None,
                                    body: [
                                        Expression {
                                            expr: PostInc {
                                                var: Variable {
                                                    name: Span {
                                                        start: 106,
                                                        end: 114,
                                                    },
                                                    span: Span {
                                                        start: 106,
                                                        end: 114,
                                                    },
                                                },
                                                span: Span {
                                                    start: 106,
                                                    end: 116,
                                                },
                                            },
                                            span: Span {
                                                start: 106,
                                                end: 123,
                                            },
                                        },
                                    ],
                                    span: Span {
                                        start: 69,
                                        end: 124,
                                    },
                                },
                                unpack: false,
                                span: Span {
                                    start: 69,
                                    end: 124,
                                },
                            },
                        ],
                        span: Span {
                            start: 46,
                            end: 124,
                        },
                    },
                    span: Span {
                        start: 46,
                        end: 136,
                    },
                },
            ],
            span: Span {
                start: 6,
                end: 138,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 0,
        end: 138,
    },
}
