tests/snapshots/declare_enddeclare_tests__declare_enddeclare_with_class.snap
---
source: tests/declare_enddeclare_tests.rs
expression: program
---
Program {
    statements: [
        Declare {
            declares: [
                DeclareItem {
                    key: Token {
                        kind: Identifier,
                        span: Span {
                            start: 14,
                            end: 26,
                        },
                    },
                    value: Integer {
                        value: [
                            49,
                        ],
                        span: Span {
                            start: 27,
                            end: 28,
                        },
                    },
                    span: Span {
                        start: 14,
                        end: 28,
                    },
                },
            ],
            body: [
                Class {
                    attributes: [],
                    modifiers: [],
                    name: Token {
                        kind: Identifier,
                        span: Span {
                            start: 41,
                            end: 51,
                        },
                    },
                    extends: None,
                    implements: [],
                    members: [
                        Method {
                            attributes: [],
                            modifiers: [
                                Token {
                                    kind: Public,
                                    span: Span {
                                        start: 62,
                                        end: 68,
                                    },
                                },
                            ],
                            name: Token {
                                kind: Identifier,
                                span: Span {
                                    start: 78,
                                    end: 81,
                                },
                            },
                            params: [
                                Param {
                                    attributes: [],
                                    modifiers: [],
                                    name: Token {
                                        kind: Variable,
                                        span: Span {
                                            start: 86,
                                            end: 88,
                                        },
                                    },
                                    ty: Some(
                                        Simple(
                                            Token {
                                                kind: TypeInt,
                                                span: Span {
                                                    start: 82,
                                                    end: 85,
                                                },
                                            },
                                        ),
                                    ),
                                    default: None,
                                    by_ref: false,
                                    variadic: false,
                                    hooks: None,
                                    span: Span {
                                        start: 82,
                                        end: 88,
                                    },
                                },
                                Param {
                                    attributes: [],
                                    modifiers: [],
                                    name: Token {
                                        kind: Variable,
                                        span: Span {
                                            start: 94,
                                            end: 96,
                                        },
                                    },
                                    ty: Some(
                                        Simple(
                                            Token {
                                                kind: TypeInt,
                                                span: Span {
                                                    start: 90,
                                                    end: 93,
                                                },
                                            },
                                        ),
                                    ),
                                    default: None,
                                    by_ref: false,
                                    variadic: false,
                                    hooks: None,
                                    span: Span {
                                        start: 90,
                                        end: 96,
                                    },
                                },
                            ],
                            return_type: Some(
                                Simple(
                                    Token {
                                        kind: TypeInt,
                                        span: Span {
                                            start: 99,
                                            end: 102,
                                        },
                                    },
                                ),
                            ),
                            body: [
                                Return {
                                    expr: Some(
                                        Binary {
                                            left: Variable {
                                                name: Span {
                                                    start: 124,
                                                    end: 126,
                                                },
                                                span: Span {
                                                    start: 124,
                                                    end: 126,
                                                },
                                            },
                                            op: Plus,
                                            right: Variable {
                                                name: Span {
                                                    start: 129,
                                                    end: 131,
                                                },
                                                span: Span {
                                                    start: 129,
                                                    end: 131,
                                                },
                                            },
                                            span: Span {
                                                start: 124,
                                                end: 131,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 117,
                                        end: 142,
                                    },
                                },
                            ],
                            doc_comment: None,
                            span: Span {
                                start: 62,
                                end: 142,
                            },
                        },
                    ],
                    doc_comment: None,
                    span: Span {
                        start: 35,
                        end: 159,
                    },
                },
            ],
            span: Span {
                start: 6,
                end: 161,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 161,
    },
}
